metadata/objects/DEMODATA__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Family_Members__c</fullName>
        <label>Business Family Members</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1 - 5</fullName>
                </value>
                <value>
                    <fullName>6 - 25</fullName>
                </value>
                <value>
                    <fullName>26 - 50</fullName>
                </value>
                <value>
                    <fullName>&gt; 100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <label>DB Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delinquency_Risk__c</fullName>
        <label>Delinquency Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low risk of delinquency</fullName>
                </value>
                <value>
                    <fullName>Moderate risk of delinquency</fullName>
                </value>
                <value>
                    <fullName>High risk of delinquency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Size_Grouping__c</fullName>
        <label>Employee Size Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under 10</fullName>
                </value>
                <value>
                    <fullName>10 to 100</fullName>
                </value>
                <value>
                    <fullName>100 to 1,000</fullName>
                </value>
                <value>
                    <fullName>1,000 to 10,000</fullName>
                </value>
                <value>
                    <fullName>10,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Segmentation_Cluster__c</fullName>
        <label>Marketing Segmentation Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Powerhouse 6000</fullName>
                </value>
                <value>
                    <fullName>Industry, Inc.</fullName>
                </value>
                <value>
                    <fullName>Bustling Manufacturers &amp; Business Services</fullName>
                </value>
                <value>
                    <fullName>The Hectic Venture Company</fullName>
                </value>
                <value>
                    <fullName>Active Traders</fullName>
                </value>
                <value>
                    <fullName>Solid &amp; Sons</fullName>
                </value>
                <value>
                    <fullName>Landmark Business Services</fullName>
                </value>
                <value>
                    <fullName>Labor-Intensive Giants</fullName>
                </value>
                <value>
                    <fullName>The Withering Branch Company</fullName>
                </value>
                <value>
                    <fullName>In Good Hands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <label>NAICS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description__c</fullName>
        <label>NAICS Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Logins__c</fullName>
        <label>Number of Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_Login_Date__c</fullName>
        <label>Portal Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Description__c</fullName>
        <label>SIC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                    <color>#0B6FCE</color>
                    <label>Prospecting</label>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                    <color>#2F5D85</color>
                    <label>Qualification</label>
                </value>
                <value>
                    <fullName>Needs Analysis</fullName>
                    <color>#AFCADF</color>
                    <label>Needs Analysis</label>
                </value>
                <value>
                    <fullName>Value Proposition</fullName>
                    <color>#A845DC</color>
                    <label>Value Proposition</label>
                </value>
                <value>
                    <fullName>Proposal/Price Quote</fullName>
                    <color>#F3D904</color>
                    <label>Proposal/Price Quote</label>
                </value>
                <value>
                    <fullName>Negotiation/Review</fullName>
                    <color>#E27001</color>
                    <label>Negotiation/Review</label>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                    <color>#78C953</color>
                    <label>Closed Won</label>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                    <color>#CC0000</color>
                    <label>Closed Lost</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tickets__c</fullName>
        <label>Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DEMODATA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Amount__c</columns>
        <columns>Business_Family_Members__c</columns>
        <columns>DB__c</columns>
        <columns>DB_Days__c</columns>
        <columns>Delinquency_Risk__c</columns>
        <columns>Employee_Size_Grouping__c</columns>
        <columns>Marketing_Segmentation_Cluster__c</columns>
        <columns>Month__c</columns>
        <columns>Record_Count__c</columns>
        <columns>SIC_Code__c</columns>
        <columns>SIC_Description__c</columns>
        <columns>Stage__c</columns>
        <columns>Tickets__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DD-{0000000000}</displayFormat>
        <label>DEMODATA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DEMODATA</pluralLabel>
    <recordTypes>
        <fullName>CustomerPortal</fullName>
        <active>true</active>
        <label>Customer Portal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>